operator-deploy/sas-bases/overlays/network/route.openshift.io/v1/route/components/sas-data-plans/route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/timeout: 300s
    router.openshift.io/cookie-same-site: Lax
    router.openshift.io/cookie_name: sas-ocp-dataPlans
    sas.com/kustomize-base: base
  labels:
    app.kubernetes.io/name: sas-data-plans
    sas.com/admin: namespace
  name: sas-data-plans
spec:
  host: $(INGRESS_HOST)
  path: /dataPlans
  port:
    targetPort: http
  to:
    kind: Service
    name: sas-data-plans
  wildcardPolicy: None

---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/timeout: 300s
    router.openshift.io/cookie-same-site: Lax
    router.openshift.io/cookie_name: sas-ocp-dataPlans
    sas.com/kustomize-base: base
  labels:
    app.kubernetes.io/name: sas-data-plans
    sas.com/admin: namespace
  name: sas-data-plans-multitenant
spec:
  host: wildcard.$(INGRESS_HOST)
  path: /dataPlans
  port:
    targetPort: http
  to:
    kind: Service
    name: sas-data-plans
  wildcardPolicy: Subdomain
